--- a/01_HelloReact/Hello_React.html
+++ b/01_HelloReact/Hello_React.html
@@ -10,6 +10,7 @@
     <!-- 为reacth准备一个容器 -->
     <div id='test'></div>
     <input type="text">
+    <input type="text" value="123456">
     <!-- 引入react核心库 -->
     <script type="text/javascript" src="../js/react.development.js"></script>
     <!-- 引入react-dom,用于支持react操作DOM -->
