--- a/01_HelloReact/Hello_React.html
+++ b/01_HelloReact/Hello_React.html
@@ -11,6 +11,7 @@
     <div id='test'></div>
     <input type="text">
     <input type="text" value="123456">
+    <p>我要提交了</p>
     <!-- 引入react核心库 -->
     <script type="text/javascript" src="../js/react.development.js"></script>
     <!-- 引入react-dom,用于支持react操作DOM -->
