--- a/01_HelloReact/Hello_React.html
+++ b/01_HelloReact/Hello_React.html
@@ -11,6 +11,10 @@
     <div id='test'></div>
     <input type="text">
     <input type="text" value="123456">
+    <input type="text" value="123456">
+    <input type="text" value="123456">
+    <input type="text" value="123456">
+    <input type="text" value="123456">
     
     <!-- 引入react核心库 -->
     <script type="text/javascript" src="../js/react.development.js"></script>
