--- a/01_HelloReact/Hello_React.html
+++ b/01_HelloReact/Hello_React.html
@@ -10,11 +10,8 @@
     <!-- 为reacth准备一个容器 -->
     <div id='test'></div>
     <input type="text">
-    <input type="text" value="123456">
-    <input type="text" value="123456">
-    <input type="text" value="123456">
-    <input type="text" value="123456">
-    <input type="text" value="123456">
+    <p>早上第一次提交</p>
+    
     
     <!-- 引入react核心库 -->
     <script type="text/javascript" src="../js/react.development.js"></script>
