--- a/01_HelloReact/Hello_React copy.html
+++ b/01_HelloReact/Hello_React copy.html
@@ -28,6 +28,7 @@
        /*  
         let pp = document.createElement('p');
         pp.innerText = '这是一段文字';
+        pp.style.fontSize = '24';
         pp.style.color = 'red';
         document.documentElement.appendChild(pp); */
     </script>
