https://github.com/supremeFang/myReact.git

--- a/01_HelloReact/Hello_React copy.html
+++ b/01_HelloReact/Hello_React copy.html
@@ -30,6 +30,9 @@
         pp.innerText = '这是一段文字';
         pp.style.fontSize = '24';
         pp.style.fontWeight='bold';
+        pp.style.fontWeight='bold';
+        pp.style.fontWeight='bold';
+        pp.style.fontWeight='bold';
         pp.style.color = 'red';
         document.documentElement.appendChild(pp); */
     </script>
