--- a/01_HelloReact/Hello_React copy.html
+++ b/01_HelloReact/Hello_React copy.html
@@ -28,12 +28,8 @@
        /*  
         let pp = document.createElement('p');
         pp.innerText = '这是一段文字';
-        pp.style.fontSize = '24';
-        pp.style.fontWeight='bold';
-        pp.style.fontWeight='bold';
-        pp.style.fontWeight='bold';
-        pp.style.fontWeight='bold';
-        pp.style.color = 'red';
+        pp.style.fontSize = '24';             
+        pp.style.color = 'green';
         document.documentElement.appendChild(pp); */
     </script>
 
