--- a/01_HelloReact/Hello_React copy.html
+++ b/01_HelloReact/Hello_React copy.html
@@ -29,7 +29,7 @@
         let pp = document.createElement('p');
         pp.innerText = '这是一段文字';
         pp.style.fontSize = '24';             
-        pp.style.color = 'green';
+        pp.style.color = 'yellow';
         document.documentElement.appendChild(pp); */
     </script>
 
